@startuml

title __MODEL's Class Diagram__\n

  namespace com.neliyenn {
    namespace model {
      class com.neliyenn.model.Comment {
          - body : String
          - createDate : Date
          - id : Long
          + getBody()
          + getCreateDate()
          + getId()
          + getPost()
          + getUser()
          + setBody()
          + setCreateDate()
          + setId()
          + setPost()
          + setUser()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace model {
      class com.neliyenn.model.Post {
          - body : String
          - comments : Collection<Comment>
          - createDate : Date
          - id : Long
          - title : String
          + getBody()
          + getComments()
          + getCreateDate()
          + getId()
          + getTitle()
          + getUser()
          + setBody()
          + setComments()
          + setCreateDate()
          + setId()
          + setTitle()
          + setUser()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace model {
      class com.neliyenn.model.Role {
          - id : Long
          - role : String
          - users : Collection<User>
          + getId()
          + getRole()
          + getUsers()
          + setId()
          + setRole()
          + setUsers()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace model {
      class com.neliyenn.model.User {
          - active : int
          - email : String
          - id : Long
          - lastName : String
          - name : String
          - password : String
          - posts : Collection<Post>
          - roles : Collection<Role>
          - username : String
          + getActive()
          + getEmail()
          + getId()
          + getLastName()
          + getName()
          + getPassword()
          + getPosts()
          + getRoles()
          + getUsername()
          + setActive()
          + setEmail()
          + setId()
          + setLastName()
          + setName()
          + setPassword()
          + setPosts()
          + setRoles()
          + setUsername()
      }
    }
  }
  

  com.neliyenn.model.Comment o-- com.neliyenn.model.Post : post
  com.neliyenn.model.Comment o-- com.neliyenn.model.User : user
  com.neliyenn.model.Post o-- com.neliyenn.model.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
